# words-lab-2

./: CMakeLists.txt  a.out  main.cpp
output/: res_a.txt  res_n.txt
